--- a/views/index.pug
+++ b/views/index.pug
@@ -15,6 +15,9 @@ block content
     .projects-box.box.grid
       each project in projects
         .cell
-          a(href= `/projects/${project.id}`)
-            img.thumbnail(src=`/static/${project.image_urls[0]}`, alt=`${project.id}`)
-            h5 #{project.project_name}
+          a(href=`/projects/${project.id}`)
+            if project.image_urls && project.image_urls.length > 0
+              img.thumbnail(src=`/static/${project.image_urls[0]}`, alt=`Thumbnail of ${project.project_name}`)
+            else
+              img.thumbnail(src="/static/images/default-thumbnail.png", alt="Default Thumbnail")
+          h5= project.project_name
