--- a/views/index.pug
+++ b/views/index.pug
@@ -16,8 +16,5 @@ block content
       each project in projects
         .cell
           a(href=`/projects/${project.id}`)
-            if project.image_urls && project.image_urls.length > 0
-              img.thumbnail(src=`/static/${project.image_urls[0]}`, alt=`Thumbnail of ${project.project_name}`)
-            else
-              img.thumbnail(src="/static/images/default-thumbnail.png", alt="Default Thumbnail")
-          h5= project.project_name
+            img.thumbnail(src=`static${project.image_urls[0]}`, alt=`${project.project_name} Thumbnail`)
+            h5= project.project_name
