--- a/views/project.pug
+++ b/views/project.pug
@@ -22,10 +22,10 @@ block content
         a.btn-link(href='${project.live_link}') Live Demo
         a.btn-link(href='${project.github_link}') GitHub Repo
 
-    .project-img-box.box
-      each url in project.image_urls
-        img.project-img(src=`${url}`, alt=`Image of ${project.project_name}`)
-   
+      .project-img-box.box
+        each img in project.image_urls
+          img.project-img(src=`/static/${img}`, alt=`Image of ${project.project_name}`)
+
   nav.nav
     a(href='/')
       span &larr;
