--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -20,7 +20,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
-  color: #0a0a0a;
+  color: #1a1a1a;
   background: #fefefe;
   background: #000;
   transform: translateX(0px);
@@ -137,7 +137,7 @@ nav a span {
   height: 100%;
   min-height: 100%;
   padding: 20px;
-  background: #000;
+  background: #222;
 }
 
 .sidebar-info-box {
@@ -291,16 +291,20 @@ nav a span {
 .btn-link {
   display: block;
   text-align: center;
-  color: #fefefe;
+  color: #ffffff;
   width: 100%;
   max-width: 255px;
   margin: auto 0 5px 0;
   padding: 0.85em 1em;
-  background-color: #333;
+  background-color: #007acc;
   border: 1px solid transparent;
 }
 
-
+a.btn-link:hover {
+  background-color: #005f99; /* Darken blue on hover */
+  color: #ffffff; /* Keep white text */
+  transition: background-color 0.3s ease; /* Smooth transition effect */
+}
 /* 
   Tablet layout styles 
 */
