--- a/views/about.pug
+++ b/views/about.pug
@@ -10,24 +10,16 @@ block content
   article.portfolio-about
     .inner-wrapper.flex-row-wrap.two-col
       .about-intro-box.box
-
-        //- Replace with your name
         h1 Peace Murerwa
-
-        //- Feel free to personalize the title below
         p Full Stack JavaScript Developer
 
 
         .about-bio
-
-          //- Replace the boilerplate below with your best elevator pitch
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p Passionate about problem-solving and improving system functionality.
 
 
       .skills-contact-box.box
         h6 Skills
-
-        //- Replace skills below with your own skills — at this point, you should be able to list as many as ten skills
         ul
           li HTML
           li CSS
@@ -42,13 +34,10 @@ block content
           li Pug
 
         h6 Contact Info
-
-        //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
           li 555-555-1234
           li contact@gmail.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
         a.btn-link(href='https://www.linkedin.com/in/peace-murerwa/') LinkedIn
         a.btn-link(href='https://github.com/pmurerwa') GitHub
         a.btn-link(href='https://x.com/?lang=en') Twitter/ X
