--- a/views/project.pug
+++ b/views/project.pug
@@ -19,8 +19,8 @@ block content
           each technology in project.technologies 
             li #{technology}
 
-        a.btn-link(href='${project.live_link}') Live Demo
-        a.btn-link(href='${project.github_link}') GitHub Repo
+        a.btn-link(href=`${project.live_link}`) Live Demo
+        a.btn-link(href=`${project.github_link}`) GitHub Repo
 
       .project-img-box.box
         each img in project.image_urls
